2005-01-27  Adam Jackson  <ajax@freedesktop.org>

	* xcompmgr.c:
	Bug #2391: Fix a use-after-free in run_fades.  (Jonathan Briggs)
	* configure.ac:
	Bump to 1.1.2.

2005-01-26  Eric Anholt  <anholt@FreeBSD.org>

	* Makefile.am:
	Include the autogen.sh in the distfile.

2004-09-29  Dan Doel  <dolio@case.edu>

	* xcompmgr.c: (paint_all):
	Added some small optimizations by Thomas Luebking. paint_all
	now avoids drawing windows that don't appear on the screen,
	and doesn't bother drawing shadows on desktop windows.

2004-09-23  Dan Doel  <dolio@case.edu>

	* xcompmgr.1:
	* xcompmgr.c: (usage), (main):
	Added options -O -I and -D for controlling fading effects and
	appropriate man entries, based on the patch by Johan Kiviniemi.

2004-09-22  Dan Doel  <dolio@case.edu>

	* xcompmgr.c: (run_fades), (solid_picture), (get_opacity_prop),
	(determine_wintype), (circulate_win):
	Miscellaneous code cleanup and checks for failed allocations.

2004-09-21  Dan Doel  <dolio@case.edu>

	* xcompmgr.c: (presum_gaussian), (make_shadow), (main):
	Added precomputation of shadows to make them a little more
	friendly to slower computers (and make ridiculously huge
	shadows usable on faster computers).

2004-09-20  Adam Jackson  <ajax@freedesktop.org>

	* xcompmgr.c:
	Print the version number in the usage summary.

2004-09-17  Dan Doel  <dolio@case.edu>

	* xcompmgr.c: (win_extents), (usage), (main):
	Added various client-side shadow options (opacity, offset, radius)
	based on the work of Thomas Luebking.
	* xcompmgr.1:
	Added descriptions of the options in the man page.

2004-09-17  Dan Doel  <dolio@case.edu>

	* xcompmgr.c: (usage):
	Changed the usage function to describe the available options.

2004-09-17  Dan Doel  <dolio@case.edu>

	* xcompmgr.c: (shadow_picture):
	Added some tests to check for failed pixmap/picture/gc allocations and
	exit appropriately.

2004-09-14  Adam Jackson  <ajax@freedesktop.org>

	* xcompmgr.c: